test/invalid_confs/invalid_enumstr.c
--ERROR: level out of range
Listen "8080" {
	error_log = { level = "good" },
	static = "./",
}
